
 - Some Unicode file system fixes

 - destructor of irrString not virtual anymore, please don't derive from irrString
   Some new methods added, for searching and splitting
   Assignment operator optimized

 - new lightness method for SColor

 - draw3DTriangle now renders filled polygons, old behavior can be achieved by setting EMT_WIREFRAME

----------------
Changes in 1.6.1

 - Fix problem that the window did sometimes not get the keyboard focus in X11 in fullscreen. Add more debug output in case focus grabbing goes wrong.

 - Fix screensize in videodriver when we didn't get the requested window size. This also prevents that gui-clicks are no longer synchronized with gui-drawing and elements can't be hit anymore.

 - Bugfix: Prevent a crash when getTypeName was called for the guienvironment. EGUIET_ELEMENT got changed for this.

 - Bugfix: Horizontal centered font with linebreaks draw now all lines. For example multiline TextSceneNodes work again.

 - Bugfix: spinbox can no longer get in an endless loop due to floating point rounding error (found by slavik262)

 - !!API change!! Disabled AntiAliasing of Lines in material default
   Please enable this manually per material when sure that it won't lead to SW rendering.

 - IGUIComboBox: clicking on the statictext displaying the active selection does now close and open listbox correctly. (Bug found by Reiko)

 - Scrollbuttons in IGUITabControl adapt now to tab-height.

 - Fix texturing of cylinder mesh

 - Fix modal dialog position (found by LoneBoco: http://sourceforge.net/tracker/?func=detail&aid=2900266&group_id=74339&atid=540676)

 - Fix DMF loading

 - Fixing left+right special keys (ctrl, shift, alt) on Win32 (thanks to pc0de for good patch-ideas).

 - Make stringarrays for enums in IGUISkin a little safer

 - Add support for keys KEY_PRINT, KEY_HOME (on numpad) and KEY_NUMLOCK on Linux.

 - Fix material handling in createMeshWith1TCoords
